<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_hint"
        android:hint="@string/edit_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_hint"
        android:hint="@string/edit_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_no" />

    <Button
        android:id="@+id/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sum"
        android:text="@string/button_sum" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sub"
        android:text="@string/button_sub" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mul"
        android:text="@string/button_mul" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="div"
        android:text="@string/button_div" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>